--- a/Engine/ColorVision.Engine/Services/Devices/SMU/Views/ViewSMU.xaml
+++ b/Engine/ColorVision.Engine/Services/Devices/SMU/Views/ViewSMU.xaml
@@ -139,6 +139,13 @@
                                     </DataTemplate>
                                 </GridViewColumn.CellTemplate>
                             </GridViewColumn>
+                            <GridViewColumn  Header="Channel">
+                                <GridViewColumn.CellTemplate>
+                                    <DataTemplate  DataType="{x:Type local:ViewResultSMU}">
+                                        <TextBlock Text="{Binding ChannelType}"/>
+                                    </DataTemplate>
+                                </GridViewColumn.CellTemplate>
+                            </GridViewColumn>
                             <GridViewColumn  Header="{x:Static properties:Resources.CreateTime}">
                                 <GridViewColumn.CellTemplate>
                                     <DataTemplate  DataType="{x:Type local:ViewResultSMU}">
