--- a/Engine/ColorVision.Engine/Templates/TemplateManagerWindow.xaml
+++ b/Engine/ColorVision.Engine/Templates/TemplateManagerWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:local="clr-namespace:ColorVision.Engine.Templates"
         xmlns:properties ="clr-namespace:ColorVision.Engine.Properties"
         mc:Ignorable="d"
-        Title="模板管理窗口" Height="600" Width="1200" Background="{DynamicResource GlobalBackground}" Initialized="Window_Initialized">
+        Title="模板管理窗口" Height="720" Width="1280" Background="{DynamicResource GlobalBackground}" Initialized="Window_Initialized">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -71,9 +71,9 @@
         <!-- Main content area: Middle Template Grid + Right Editor Panel -->
         <Grid Grid.Row="1" Margin="5,0,5,5">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*" MinWidth="350"/>
-                <ColumnDefinition Width="5"/>
                 <ColumnDefinition Width="400" MinWidth="350"/>
+                <ColumnDefinition Width="5"/>
+                <ColumnDefinition Width="*" MinWidth="350"/>
             </Grid.ColumnDefinitions>
 
             <!-- Middle: Template Grid (ScrollViewer with dynamic content) -->
@@ -103,9 +103,14 @@
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
-                <TextBlock Grid.Row="0" x:Name="EditorTitle" Text="选择一个模板查看详情" 
+                <DockPanel>
+                    <Button DockPanel.Dock="Right" x:Name="OpenFullEditorButton" Content="打开完整编辑器" 
+                        Padding="10,5" Click="OpenFullEditor_Click"/>
+                    <TextBlock Grid.Row="0" x:Name="EditorTitle" Text="选择一个模板查看详情" 
                           FontSize="14" FontWeight="Bold" Margin="5,5,5,5" 
                           Foreground="{DynamicResource PrimaryTextBrush}"/>
+                </DockPanel>
+
                 <Grid Grid.Row="1" x:Name="EditorContainer">
                     <!-- Template editor content will be loaded here dynamically -->
                     <TextBlock x:Name="PlaceholderText" Text="请选择一个模板以查看和编辑" 
