--- a/Engine/ColorVision.Engine/Services/Devices/Algorithm/Views/AlgorithmView.xaml
+++ b/Engine/ColorVision.Engine/Services/Devices/Algorithm/Views/AlgorithmView.xaml
@@ -123,6 +123,13 @@
                                     </DataTemplate>
                                 </GridViewColumn.CellTemplate>
                             </GridViewColumn>
+                            <GridViewColumn  Header="{x:Static properties:Resources.CreateTime}" Width="100">
+                                <GridViewColumn.CellTemplate>
+                                    <DataTemplate  DataType="{x:Type se:ViewResultAlg}">
+                                        <TextBlock Text="{ Binding  CreateTime,StringFormat=yyyy/MM/dd/HH:mm:ss}" />
+                                    </DataTemplate>
+                                </GridViewColumn.CellTemplate>
+                            </GridViewColumn>
                             <GridViewColumn  Header="ResultDesc" >
                                 <GridViewColumn.CellTemplate>
                                     <DataTemplate  DataType="{x:Type se:ViewResultAlg}">
@@ -155,14 +162,6 @@
                                 <GridViewColumn.CellTemplate>
                                     <DataTemplate  DataType="{x:Type se:ViewResultAlg}">
                                         <TextBlock Text="{ Binding  ResultImagFile}" />
-                                    </DataTemplate>
-                                </GridViewColumn.CellTemplate>
-                            </GridViewColumn>
-
-                            <GridViewColumn  Header="{x:Static properties:Resources.CreateTime}" >
-                                <GridViewColumn.CellTemplate>
-                                    <DataTemplate  DataType="{x:Type se:ViewResultAlg}">
-                                        <TextBlock Text="{ Binding  CreateTime}" />
                                     </DataTemplate>
                                 </GridViewColumn.CellTemplate>
                             </GridViewColumn>
