--- a/Engine/ColorVision.Engine/Services/PhyCameras/PhyCameraManagerWindow.xaml
+++ b/Engine/ColorVision.Engine/Services/PhyCameras/PhyCameraManagerWindow.xaml
@@ -7,12 +7,36 @@
         mc:Ignorable="d"
         d:DataContext="{d:DesignInstance local:PhyCameraManager}"
         xmlns:properties ="clr-namespace:ColorVision.Engine.Properties" xmlns:hc="https://handyorg.github.io/handycontrol"
-        Title="{x:Static properties:Resources.PhysicalCameraManager}" Height="500" Width="1108" Background="{DynamicResource GlobalBackground}"  Initialized="Window_Initialized">
+        Title="{x:Static properties:Resources.PhysicalCameraManager}" Height="720" Width="1280" Background="{DynamicResource GlobalBackground}"  Initialized="Window_Initialized">
     <Grid Margin="5">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
+        <Grid Margin="5,0,0,5">
+            <StackPanel HorizontalAlignment="Right" Orientation="Horizontal" Margin="0,5,0,0">
+                <hc:Badge Value="{Binding Count}" BadgeMargin="0,-14,-10,0"  Style="{StaticResource BadgeDanger}" Margin="0,0,10,0">
+                    <Button Content="{x:Static properties:Resources.AddUncreatedCamera}" Command="{Binding CreateCommand}" />
+                </hc:Badge>
+                <Button Content="{x:Static properties:Resources.LicenseImport}" Command="{Binding ImportCommand}" Margin="0,0,5,0"/>
+                <Button  Command="{Binding EditCofigCommand}" Padding="2" Height="27" Width="27" >
+                    <TextBlock Text="&#xE713;"  HorizontalAlignment="Center" FontFamily="Segoe MDL2 Assets" RenderTransformOrigin="0.5,0.5"  FontSize="20" Foreground="{DynamicResource GlobalTextBrush}">
+                        <TextBlock.RenderTransform>
+                            <RotateTransform x:Name="rotateTransform21"/>
+                        </TextBlock.RenderTransform>
+                    </TextBlock>
+                    <Button.Triggers>
+                        <EventTrigger RoutedEvent="Button.Click">
+                            <BeginStoryboard>
+                                <Storyboard>
+                                    <DoubleAnimation Storyboard.TargetName="rotateTransform21" Storyboard.TargetProperty="Angle" From="0" To="360" Duration="0:0:0.5" FillBehavior="Stop"/>
+                                </Storyboard>
+                            </BeginStoryboard>
+                        </EventTrigger>
+                    </Button.Triggers>
+                </Button>
+            </StackPanel>
+        </Grid>
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
@@ -44,12 +68,7 @@
                         </Style>
                     </TreeView.ItemContainerStyle>
                 </TreeView>
-                <StackPanel Grid.Row="1" Orientation="Horizontal" Margin="0,5,0,0">
-                    <hc:Badge Value="{Binding Count}" BadgeMargin="0,-14,-10,0"  Style="{StaticResource BadgeDanger}" Margin="0,0,10,0">
-                        <Button Content="{x:Static properties:Resources.AddUncreatedCamera}" Command="{Binding CreateCommand}" />
-                    </hc:Badge>
-                    <Button Content="{x:Static properties:Resources.LicenseImport}" Command="{Binding ImportCommand}" Margin="0,0,5,0"/>
-                </StackPanel>
+
 
             </Grid>
             <Grid x:Name="StackPanelShow" Grid.Column="1" Margin="0,0,0,0" />
