--- a/Engine/ColorVision.Engine/Templates/Flow/ViewFlow.xaml
+++ b/Engine/ColorVision.Engine/Templates/Flow/ViewFlow.xaml
@@ -111,10 +111,10 @@
                     <TextBox x:FieldModifier="public"  x:Name="logTextBox" Background="Transparent" TextWrapping="WrapWithOverflow" Height="105" Grid.Row="1" Padding="5,5" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" BorderThickness="0"  VerticalAlignment="Stretch" VerticalContentAlignment="Top" IsReadOnly="True" Margin="0,0,0,5" />
                 </StackPanel>
             </Border>
-
-            <Border x:Name="SignStackBorder" Grid.Row="3"  Background="{DynamicResource SecondaryRegionBrush}" Visibility="Visible" BorderBrush="{DynamicResource BorderBrush}" BorderThickness="0" Margin="5,0,5,5" CornerRadius="5">
+    
+            <Border x:Name="SignStackBorder" Grid.Row="3" Visibility="Visible" BorderBrush="{DynamicResource BorderBrush}" CornerRadius="5">
                 <StackPanel>
-                    <StackPanel x:Name="SignStackPannel"  Orientation="Vertical" Margin="3" />
+                    <StackPanel x:Name="SignStackPannel"  Orientation="Vertical" Margin="4" />
                 </StackPanel>
             </Border>
 
