--- a/Projects/ProjectARVRPro/TestResultViewWindow.xaml
+++ b/Projects/ProjectARVRPro/TestResultViewWindow.xaml
@@ -48,6 +48,7 @@
         </DataGrid>
         
         <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,0,0">
+            <Button Content="查看Json" Width="100" Margin="0,0,10,0" Click="OpenJson_Click"/>
             <Button Content="导出 CSV" Width="100" Margin="0,0,10,0" Click="ExportCsv_Click"/>
             <Button Content="导出 PDF" Width="100" Click="ExportPdf_Click"/>
         </StackPanel>
