--- a/Engine/ColorVision.Engine/Templates/Flow/ViewFlow.xaml
+++ b/Engine/ColorVision.Engine/Templates/Flow/ViewFlow.xaml
@@ -29,9 +29,7 @@
         <Grid Grid.Column="1"  x:Name="Grid2"  Width="250" >
             <Grid.RowDefinitions >
                 <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
-                <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
             <Border Grid.Row="0"    Margin="0,5,0,5" >
@@ -93,27 +91,49 @@
                         <Button Content="{x:Static properties:Resources.ParsingManagement}" Click="Button_Click_1" Margin="0,0,5,0"/>
                         <Button Content="预处理管理" Click="Button_Click_PreProcess"/>
                     </StackPanel>
-                    <StackPanel>
-                        <StackPanel Orientation="Horizontal">
-                            <Button Content="x64Log" Command="{Binding FlowEngineManager.WindowsServiceX64.OpenLogCommand}"/>
+                    <StackPanel Margin="0,0,0,5"  Orientation="Horizontal">
+                        <StackPanel Orientation="Horizontal" Margin="0,0,5,0">
+                            <Button Content="x64" Command="{Binding FlowEngineManager.WindowsServiceX64.OpenLogCommand}"/>
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal" Margin="0,0,5,0">
+                            <Button Content="dev" Command="{Binding FlowEngineManager.WindowsServiceDev.OpenLogCommand}"/>
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal" Margin="0,0,5,0">
+                            <Button Content="RC" Command="{Binding FlowEngineManager.WindowsServiceReg.OpenLogCommand}"/>
                         </StackPanel>
                         <StackPanel Orientation="Horizontal">
-                            <Button Content="devLog" Command="{Binding FlowEngineManager.WindowsServiceDev.OpenLogCommand}"/>
-                        </StackPanel>
-                        <StackPanel Orientation="Horizontal">
-                            <Button Content="RCLog" Command="{Binding FlowEngineManager.WindowsServiceReg.OpenLogCommand}"/>
-                        </StackPanel>
-                        <StackPanel Orientation="Horizontal">
-                            <Button Content="CameraLog" Command="{Binding FlowEngineManager.OpenCameraLogCommand}"/>
+                            <Button Content="Camera" Command="{Binding FlowEngineManager.OpenCameraLogCommand}"/>
                         </StackPanel>
                     </StackPanel>
-                    
                     <ProgressBar x:Name="ProgressBar1" Maximum="100"/>
                     <TextBox x:FieldModifier="public"  x:Name="logTextBox" Background="Transparent" TextWrapping="WrapWithOverflow" Height="105" Grid.Row="1" Padding="5,5" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" BorderThickness="0"  VerticalAlignment="Stretch" VerticalContentAlignment="Top" IsReadOnly="True" Margin="0,0,0,5" />
                 </StackPanel>
             </Border>
-    
-            <Border x:Name="SignStackBorder" Grid.Row="3" Visibility="Visible" BorderBrush="{DynamicResource BorderBrush}" CornerRadius="5">
+
+            <ListView x:Name="NodeListView" Grid.Row="1"  Background="Transparent" BorderThickness="0" Padding="0" SelectionChanged="NodeListView_SelectionChanged" ItemsSource="{Binding FlowEngineManager.CVBaseServerNodes}">
+                <ListView.ItemContainerStyle>
+                    <Style TargetType="{x:Type ListViewItem}" BasedOn="{StaticResource ListViewItemBaseStyle.Small}" >
+                    </Style>
+                </ListView.ItemContainerStyle>
+                <ListView.View>
+                    <GridView >
+                        <GridView.ColumnHeaderContainerStyle>
+                            <Style TargetType="{x:Type GridViewColumnHeader}" BasedOn="{StaticResource  GridViewColumnHeaderBase}">
+                                <Setter Property="Visibility" Value="Collapsed" />
+                            </Style>
+                        </GridView.ColumnHeaderContainerStyle>
+                        <GridViewColumn  Header="2222"  Width="250">
+                            <GridViewColumn.CellTemplate>
+                                <DataTemplate>
+                                    <TextBlock Text="{Binding Title,Mode=OneWay}"/>
+                                </DataTemplate>
+                            </GridViewColumn.CellTemplate>
+                        </GridViewColumn>
+                    </GridView>
+                </ListView.View>
+            </ListView>
+
+            <Border x:Name="SignStackBorder" Grid.Row="2" Visibility="Visible" BorderBrush="{DynamicResource BorderBrush}" CornerRadius="5">
                 <StackPanel>
                     <StackPanel x:Name="SignStackPannel"  Orientation="Vertical" Margin="4" />
                 </StackPanel>
