--- a/Engine/ColorVision.Engine/Services/PhyCameras/LicenseManagerWindow.xaml
+++ b/Engine/ColorVision.Engine/Services/PhyCameras/LicenseManagerWindow.xaml
@@ -21,6 +21,8 @@
             <StackPanel Orientation="Horizontal">
                 <Button Content="GetCameraLicense" Command="{Binding GetCameraLicenseCommand}" Margin="0,0,5,0"/>
                 <Button Content="GetSpectrumLicense" Command="{Binding GetSpectrumLicenseCommand}" Margin="0,0,5,0"/>
+                <Button Content="SaveToLincense" Command="{Binding SaveToLincenseCommand}" Margin="0,0,5,0"/>
+                
                 <Button Content="{x:Static properties:Resources.LicenseImport}" Command="{Binding ImportCommand}" Margin="0,0,5,0"/>
                 <Button Content="{x:Static properties:Resources.ExportLicense}" Command="{Binding ExportSelectedCommand}" Margin="0,0,5,0"/>
                 <Button Content="{x:Static properties:Resources.Delete}" Command="{Binding DeleteSelectedCommand}" Margin="0,0,5,0"/>
