--- a/Engine/ColorVision.Engine/Services/PhyCameras/LicenseManagerWindow.xaml
+++ b/Engine/ColorVision.Engine/Services/PhyCameras/LicenseManagerWindow.xaml
@@ -44,7 +44,7 @@
                 <DataGridTextColumn Header="ID" Binding="{Binding Id}" Width="60"/>
                 <DataGridTextColumn Header="MAC/SN" Binding="{Binding MacAddress}" Width="180"/>
                 <DataGridTextColumn Header="{x:Static properties:Resources.Type}" Binding="{Binding LiceTypeString}" Width="100"/>
-                <DataGridTextColumn Header="{x:Static properties:Resources.Model}" Binding="{Binding Model}" Width="120"/>
+                <DataGridTextColumn Header="{x:Static properties:Resources.Model}" Binding="{Binding Model1}" Width="120"/>
                 <DataGridTextColumn Header="{x:Static properties:Resources.Customer}" Binding="{Binding CusTomerName}" Width="150"/>
                 <DataGridTextColumn Header="ExpiryDate" Binding="{Binding ExpiryDate, StringFormat=yyyy-MM-dd}" Width="120"/>
                 <DataGridTemplateColumn Header="{x:Static properties:Resources.Status}" Width="80">
