--- a/Engine/ColorVision.Engine/Services/Devices/Spectrum/Views/ViewEqe.xaml
+++ b/Engine/ColorVision.Engine/Services/Devices/Spectrum/Views/ViewEqe.xaml
@@ -77,6 +77,11 @@
                     <ListView.Resources>
                         <ContextMenu x:Key="ItemContextMenu" Opened="ContextMenu_Opened"/>
                     </ListView.Resources>
+                    <ListView.ItemContainerStyle>
+                        <Style TargetType="{x:Type ListViewItem}" BasedOn="{StaticResource ListViewItemBaseStyle.Small}">
+                            <Setter Property="ContextMenu" Value="{Binding ContextMenu}"/>
+                        </Style>
+                    </ListView.ItemContainerStyle>
                     <ListView.View>
                         <GridView>
                             <GridView.ColumnHeaderContainerStyle>
