--- a/Engine/ColorVision.Engine/Services/Devices/Spectrum/Views/ViewEqe.xaml
+++ b/Engine/ColorVision.Engine/Services/Devices/Spectrum/Views/ViewEqe.xaml
@@ -47,6 +47,8 @@
                         </ToggleButton>
                         <Button Content="关闭" Click="Close_Click" Margin="2,0,0,0"/>
                         <Button Content="{x:Static properties:Resources.Exchange}" Click="Exchange_Click" Margin="2,0,0,0"/>
+                        <Button Content="{x:Static properties:Resources.Inquire}" Click="Inquire_Click" Margin="2,0,0,0"/>
+                        <Button x:Name="Search" Content="{x:Static properties:Resources.AdvanceSearch}" Click="SearchAdvanced_Click" Margin="2,0,0,0"/>
                     </ToolBar>
                 </ToolBarTray>
 
