--- a/Engine/ColorVision.Engine/Services/Devices/Spectrum/InfoSpectrum.xaml
+++ b/Engine/ColorVision.Engine/Services/Devices/Spectrum/InfoSpectrum.xaml
@@ -145,9 +145,9 @@
                                 <StackPanel Margin="5">
                                     <DockPanel Margin="0,2">
                                         <TextBlock Text="{x:Static properties:Resources.IsEnable}" Width="120"/>
-                                        <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0" Text="{Binding Config.IsShutterEnable}"/>
+                                        <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0" Text="{Binding Config.IsShutter}"/>
                                     </DockPanel>
-                                    <StackPanel Visibility="{Binding Config.IsShutterEnable,Converter={StaticResource bool2VisibilityConverter}}">
+                                    <StackPanel Visibility="{Binding Config.IsShutter,Converter={StaticResource bool2VisibilityConverter}}">
                                         <DockPanel Margin="0,2">
                                             <TextBlock Text="{x:Static properties:Resources.Serial}" Width="120"/>
                                             <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0" Text="{Binding Config.ShutterCfg.Addr}"/>
