--- a/UI/ColorVision.ImageEditor/ImageView.xaml
+++ b/UI/ColorVision.ImageEditor/ImageView.xaml
@@ -77,17 +77,17 @@
 
                 </local:Zoombox>
 
-                <ComboBox x:Name="ComboBoxLayers" HorizontalAlignment="Left" BorderThickness="0" VerticalAlignment="Top"  Style="{StaticResource ComboBox.Small}" x:FieldModifier="public"  SelectedIndex="0"  Grid.Column="1"/>
-                <ToolBar x:Name="ToolBarAl"  x:FieldModifier="public" Style="{StaticResource ToolBarBaseStyle}" Background="Transparent" ToolBarTray.IsLocked="True"  VerticalAlignment="Bottom" Grid.Row="0"  HorizontalAlignment="Left" Visibility="{Binding Config.IsToolBarAlVisible,Converter={StaticResource bool2VisibilityConverter}}">
+                <ComboBox x:Name="ComboBoxLayers" HorizontalAlignment="Left" BorderThickness="0" VerticalAlignment="Top" Margin="5,5,0,0" Opacity="0.6" Style="{StaticResource ComboBox.Small}" x:FieldModifier="public"  SelectedIndex="0"  Grid.Column="1" Visibility="Collapsed"/>
+                <ToolBar x:Name="ToolBarAl"  x:FieldModifier="public" Style="{StaticResource ToolBarBaseStyle}"  Opacity="0.8" Background="Transparent" ToolBarTray.IsLocked="True"  VerticalAlignment="Bottom" Grid.Row="0"  HorizontalAlignment="Left" Visibility="{Binding Config.IsToolBarAlVisible,Converter={StaticResource bool2VisibilityConverter}}">
                     <ComboBox x:Name="ComboxPOITemplate"  x:FieldModifier="public" Style="{StaticResource ComboBox.Small}" Width="100" HorizontalAlignment="Left" SelectedValuePath="Value"  DisplayMemberPath="Key"/>
                 </ToolBar>
 
-                <ToolBarTray x:Name="ToolBarDraw" HorizontalAlignment="Center" VerticalAlignment="Bottom" Grid.Column="1" Visibility="{Binding Config.IsToolBarDrawVisible,Converter={StaticResource bool2VisibilityConverter}}">
+                <ToolBarTray x:Name="ToolBarDraw" HorizontalAlignment="Center" VerticalAlignment="Bottom" Grid.Column="1" Opacity="0.9" Visibility="{Binding Config.IsToolBarDrawVisible,Converter={StaticResource bool2VisibilityConverter}}">
                     <ToolBar ToolBarTray.IsLocked="True"  >
                     </ToolBar>
                 </ToolBarTray>
 
-                <ToolBarTray x:Name="ToolBarTop" Visibility="{Binding Config.IsToolBarTopVisible,Converter={StaticResource bool2VisibilityConverter}}" VerticalAlignment="Top" Grid.Row="0"  HorizontalAlignment="Center" Grid.Column="1">
+                <ToolBarTray x:Name="ToolBarTop" Visibility="{Binding Config.IsToolBarTopVisible,Converter={StaticResource bool2VisibilityConverter}}" Opacity="0.9" VerticalAlignment="Top" Grid.Row="0"  HorizontalAlignment="Center" Grid.Column="1">
                     <ToolBar  ToolBarTray.IsLocked="True" Margin="0,2,4,0" >
                         <ToggleButton IsChecked="{Binding ImageEditMode}"  Margin="1,0">
                             <Image Style="{StaticResource ToolBarImage}" Source="{DynamicResource DrawingImagedrag}" Margin="-5"/>
@@ -95,11 +95,11 @@
                     </ToolBar>
                 </ToolBarTray>
 
-                <ToolBarTray x:Name="ToolBarLeft" Visibility="{Binding Config.IsToolBarLeftVisible,Converter={StaticResource bool2VisibilityConverter}}" HorizontalAlignment="Left" Orientation="Vertical" Margin="2,50,0,0"  VerticalAlignment="Top">
+                <ToolBarTray x:Name="ToolBarLeft" Visibility="{Binding Config.IsToolBarLeftVisible,Converter={StaticResource bool2VisibilityConverter}}" Opacity="0.9" HorizontalAlignment="Left" Orientation="Vertical" Margin="2,50,0,0"  VerticalAlignment="Top">
                     <ToolBar ToolBarTray.IsLocked="True" Padding="2,3"  >
                     </ToolBar>
                 </ToolBarTray>
-                <ToolBarTray x:Name="ToolBarRight" Visibility="{Binding Config.IsToolBarRightVisible,Converter={StaticResource bool2VisibilityConverter}}" Orientation="Vertical" Margin="0,50,2,0" Grid.Row="0" HorizontalAlignment="Right" VerticalAlignment="Top" Grid.Column="1">
+                <ToolBarTray x:Name="ToolBarRight" Visibility="{Binding Config.IsToolBarRightVisible,Converter={StaticResource bool2VisibilityConverter}}" Opacity="0.9" Orientation="Vertical" Margin="0,50,2,0" Grid.Row="0" HorizontalAlignment="Right" VerticalAlignment="Top" Grid.Column="1">
                     <ToolBar ToolBarTray.IsLocked="True" Padding="2,3" >
                         <ToggleButton x:Name="AdvancedButton" Margin="0,0,0,2"  Padding="5">
                             <Image Style="{StaticResource ToolBarImage}"  Source="{DynamicResource DIExpand}" />
